tests/ui/missing_attribute.stderr
error: Variant 'Missing' requires an #[exit_code(N)] attribute
 --> tests/ui/missing_attribute.rs:7:5
  |
7 |     Missing,
  |     ^^^^^^^
